Fix collapsing secondary buttons

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -3671,7 +3671,7 @@ td.x-grid3-hd-menu-open .x-grid3-hd-inner {
   cursor: pointer;
   display: inline-block;
   *display: inline;
-  line-height: 0;
+  line-height: 1;
   padding: 10px 15px 10px 15px;
   position: relative;
   text-decoration: none;
@@ -4987,7 +4987,10 @@ input::-moz-focus-inner {
       top: 0;
       right: 0;
       z-index: 1;
-      /* needs to stay below the transparent file input field */ }
+      /* needs to stay below the transparent file input field */
+      line-height: 0;
+      box-shadow: none;
+      border-left: solid 1px #E4E4E4; }
     .x-form-field-wrap.x-form-fileupload-wrap .x-form-file-text {
       position: relative;
       z-index: 3;
